--- a/style.css
+++ b/style.css
@@ -1,67 +1,111 @@
+header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+/*   max-width: 700px; */
+  width: 100%;
+  height: 70px;
+  justify-content: space-around;
+  align-content: center;
+  background: black;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+a {
+  color: white;
+  font-family: 'Josefin Sans', sans-serif;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+a:hover {
+  text-shadow: 0px 0px 20px white;
+/*   color: red; */
+
+}
+
+.pic {
+  position: relative;
+}
+
 img {
   width: 100%;
-  position: relative;
+  height: 100%;
+  
 }
 
 h2 {
   position: absolute;
-  top: 225px;
-  left: 300px;
+  top: 310px;
+  left: 70px;
   font-family: 'Abril Fatface', cursive;
-  font-size: 36px;
+  font-size: 50px;
   font-weight: lighter;
+  text-shadow: 2px 2px 20px #ff0000;
 }
 
-h1 {
+.anakin {
   position: absolute;
-  top: 235px;
-  left: 300px;
+  top:350px;
+  left: 70px;
+
+  }
+
+h1 {
   font-family: 'Abril Fatface', cursive;
-  font-size: 72px;
+  font-size: 110px;
   font-weight: lighter;
+  line-height: 1;
+  text-shadow: 2px 2px 20px #ff0000;
 }
 
 .container {
-  width: 1280px;
+  max-width: 1280px;
 /*   background: grey; */
   display: flex;
-  flex-direction: column; 
+  flex-direction: row; 
+  flex-wrap: wrap;
   line-height: 1.5;
   font-size: 18px;
+/*   justify-content: center; */
+  margin-right: auto;
+  margin-left: auto;
 }  
 
 p {
   font-family: 'Josefin Sans', sans-serif;
-
+  font-size: 30px;
   font-weight: lighter;
   
 }
 
 .text {
 /*   background: grey; */
-  width: 700px;
+/*   width: 50%; */
+/*   flex-grow: 5; */
   color: #222;
 /*   margin-top: 50px; */
-  margin-left: auto;
-  margin-right: auto;
+/*   margin-left: auto;
+  margin-right: auto; */
   font-weight: lighter;
   
   
 }
 
 .citation {
-  width: 820px;
+/*   width: 50%; */
   color: white;
   background: #404040;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 50px;
+/*   margin-left: auto;
+  margin-right: auto; */
+  font-size: 80px;
   font-family: 'Abril Fatface', cursive;
 /*   font-weight: lighter; */
 /*   text-align: center; */
   position: relative ;
   line-height: 1.5;
-  padding-left: 30px;
+  padding: 20px;
   
 }
 
@@ -76,16 +120,17 @@ blockquote::before {
 
 h3 {
   text-transform: uppercase;
+  font-size: 30px;
 }
 
 h4 {
-  font-size: 24px;
+  font-size: 30px;
 /*   font-stretch: expanded; */
 }
 
 h5 {
   font-family: 'Merriweather', serif;
-  font-size: 15px;
+  font-size: 20px;
   font-style: italic;
   margin-top: -35px;
   font-weight: lighter;
@@ -93,9 +138,28 @@ h5 {
 
 ul {
   line-height: 1.5;
+  font-size: 30px;
 }
 
-hr {
-/*   height: 5px; */
-  border: 2px solid;;
+.innercontainer {
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.leftside {
+  width: 70% ;
+/*   flex-grow: 1; */
+  justify-content: flex-start;
+/*   background: blue; */
+  margin-right: 20px;
+}
+
+.rightside {
+  width: 100% ;
+/*   flex-grow: 3; */
+  justify-content: flex-start;
+/*   background: red; */
+/*   margin-top: 40px; */
+  font-family: 'Josefin Sans', sans-serif;
+/*   padding-right: 40px; */
 }
